--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,23 @@
 
 {
     "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
+      { "source": "/(.*)", "destination": "/index.html" },
+      { "source": "/sitemap.xml", "destination": "/api/sitemap.xml" }
+    ],
+    "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    }
+  ]
   }
   
