--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 
 {
     "rewrites": [
+      { "source": "/sitemap.xml", "destination": "https://yynlzhfibeozrwrtrjbs.supabase.co/functions/v1/sitemap" },
+      { "source": "/robots.txt", "destination": "https://yynlzhfibeozrwrtrjbs.supabase.co/functions/v1/robots" },
       { "source": "/(.*)", "destination": "/index.html" }
     ]
   }
